--- a/.github/workflows/ibm-cf-v2.yml
+++ b/.github/workflows/ibm-cf-v2.yml
@@ -1,3 +1,32 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@zgc999 
+P3TERX
+/
+IBM-CF-V2
+Template
+2
+4613
+Code
+Issues
+Pull requests
+Actions
+Security
+Insights
+IBM-CF-V2/.github/workflows/ibm-cf-v2.yml
+@P3TERX
+P3TERX Change the installation method of Cloud Foundry CLI
+Latest commit c1f7e1a yesterday
+ History
+ 1 contributor
+112 lines (101 sloc)  2.86 KB
+  
 #
 # https://github.com/P3TERX/IBM-CF-V2
 #
@@ -36,12 +65,9 @@ jobs:
 
     - name: Install Cloud Foundry CLI
       run: |
-        sudo rm -rf /etc/apt/sources.list.d/*
-        wget -qO- https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | sudo apt-key add -
-        echo "deb https://packages.cloudfoundry.org/debian stable main" | sudo tee /etc/apt/sources.list.d/cloudfoundry-cli.list
-        sudo apt-get update
-        sudo apt-get install cf-cli
-
+        curl -fsSL "https://packages.cloudfoundry.org/stable?release=linux64-binary&source=github&version=v6" | tar -zxC /tmp
+        sudo mv /tmp/cf /usr/local/bin
+        cf version
     - name: Login to IBM Cloud Foundry
       run: |
         cf login \
@@ -50,7 +76,6 @@ jobs:
           -p "${IBM_CF_PASSWORD}" \
           -o "${IBM_CF_ORG_NAME:-$IBM_CF_USERNAME}" \
           -s "${IBM_CF_SPACE_NAME:-dev}"
-
     - name: Download Latest V2Ray
       run: |
         DOWNLOAD_URL="https://github.com/v2fly/v2ray-core/releases/latest/download/v2ray-linux-64.zip"
@@ -58,7 +83,7 @@ jobs:
         unzip latest-v2ray.zip v2ray v2ctl geoip.dat geosite.dat
         rm latest-v2ray.zip
         chmod -v 755 v2*
-
+        ./v2ray -version
     - name: Generate V2Ray Config File
       run: |
         cat > config.json << EOF
@@ -94,7 +119,6 @@ jobs:
           ]
         }
         EOF
-
     - name: Generate Manifest File
       run: |
         cat > manifest.yml << EOF
@@ -104,10 +128,21 @@ jobs:
           disk_quota: 128M
           instances: 1
           random-route: true
-          command: ./v2ray
+          command: ./v2ray -config=config.json
           buildpacks:
           - binary_buildpack
         EOF
-
     - name: Deploy Cloud Foundry App
       run: cf push
+© 2020 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
